--- a/styles.css
+++ b/styles.css
@@ -447,13 +447,12 @@
 
 .sale-image-row {
   display: flex;
-  padding-right: 10px;
   object-fit: cover;
+  width: 80%;
 }
 
-.row-imgs,
-.col-imgs {
-  margin-right: 8px;
+.row-imgs {
+  height: 380px;
 }
 
 .col-imgs2 {
@@ -461,7 +460,8 @@
 }
 
 .sale-image-column {
-  justify-content: space-between;
+  margin-left: 10px;
+  margin-right: 10px;
   object-fit: cover;
 }
 
@@ -498,7 +498,7 @@
 }
 
 .services-img {
-  height: 350px;
+  height: 320px;
   margin-top: -100px;
 }
 .home-esses-img {
