--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,8 @@
 
 .navbar-shopping-cart img {
   height: 32px;
-  padding-right: 100px;
   cursor: pointer;
+  margin-right: 100px;
 }
 
 .navbar .menu li a {
@@ -136,41 +136,15 @@
   display: flex;
 }
 
-.navbar .myaccount-btn {
-  display: flex;
-  color: white;
-  font-size: 14px;
-  align-items: center;
-  font-family: "Montserrat", sans-serif;
-  border: 0.25px rgb(80, 80, 80) solid;
-  padding: 5px 10px;
-  position: absolute;
-  right: 60px;
-  border-radius: 4px;
+.menu-btn-icon {
+  display: none;
 }
-
 .selected-nabar-item-pill {
   width: 2rem;
   margin-top: 6px;
   height: 3px;
   border-radius: 2px;
   background-color: #ff9500;
-}
-
-.navbar .myaccount-btn img {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-}
-
-.navbar .myaccount-btn a {
-  color: white;
-  transition: all 0.2s ease;
-}
-
-.navbar .myaccount-btn a:hover,
-.navbar .myaccount-btn img:hover {
-  color: orange;
 }
 
 .box select {
@@ -325,19 +299,6 @@
 
 /* shop categories styles */
 
-.shop-categories-container {
-  display: flex;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  height: 50px;
-  width: 80%;
-  margin-top: 50px;
-  margin-bottom: 10px;
-  justify-content: space-between;
-  background: rgba(211, 211, 211, 0.6);
-}
-
 .sort-categories {
   height: 50px;
   display: flex;
@@ -362,6 +323,18 @@
   cursor: pointer;
 } */
 
+.shop-categories-container {
+  display: flex;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  height: 50px;
+  width: 80%;
+  margin-top: 50px;
+  margin-bottom: 10px;
+  justify-content: space-between;
+  background: rgba(211, 211, 211, 0.6);
+}
 .arrow-container {
   display: flex;
   margin: 10px;
@@ -688,6 +661,7 @@
   display: flex;
   padding-left: 50px;
   padding-right: 50px;
+  overflow: hidden;
 }
 
 .review-person-name {
@@ -723,13 +697,21 @@
   justify-content: space-between;
 }
 
-.review-arrows div {
-  padding: 3px 8px;
+.review-row-text-container {
+  display: flex;
+}
+
+.review-arrows span {
+  padding: 0px 8px;
   cursor: pointer;
   margin-left: -10px;
   margin-right: -10px;
   background-color: white;
   border: #b9b9b9 1px solid;
+}
+
+.scrollerview-review {
+  display: flex;
 }
 
 /* brands styles */
@@ -740,6 +722,7 @@
   margin-right: auto;
   margin-top: 60px;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 .brand-container img {
@@ -748,6 +731,26 @@
   padding: 25px 50px;
   border: #636363 1px solid;
 }
+
+.arrow-container-brand {
+  position: absolute;
+  width: 82%;
+  justify-content: space-between;
+  margin-left: 9%;
+  display: flex;
+  margin-top: 25px;
+}
+
+.arrow-span-brand {
+  font-size: 1.6rem;
+  font-weight: bold;
+  background-color: white;
+  border: gray 1px solid;
+  padding: 0px 10px;
+  cursor: pointer;
+}
+
+/* footer styling */
 
 footer {
   background: rgb(233, 233, 233);
@@ -844,4 +847,525 @@ footer {
   background-color: white;
   color: orange;
   border: orange 1px solid;
+}
+
+/* mobile responsive */
+@media (max-width: 415px) {
+  .welcome-text {
+    font-size: 0.6rem;
+    font-weight: bold;
+  }
+
+  .contact-details-topbar {
+    display: flex;
+    align-items: center;
+  }
+
+  .text-topbar {
+    margin-right: 0.6rem;
+  }
+
+  .contact-details-topbar img {
+    height: 0.7rem;
+    padding-right: 2px;
+  }
+
+  .app-icon img {
+    height: 1rem;
+  }
+
+  .app-icon-row-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .search-auth-container img {
+    height: 1.2rem;
+  }
+
+  .search-input {
+    /* position: relative;
+    width: 14rem;
+    height: 1.6rem;
+    margin-right: 2rem;
+    background: rgb(241, 240, 240);
+    padding: 4px 10px;
+    align-items: center;
+    border-radius: 10rem; */
+    display: none;
+  }
+
+  .search-icon {
+    background: none;
+    display: none;
+  }
+
+  .login-text {
+    margin-right: 1rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+
+  .signup-text {
+    background-color: orange;
+    color: white;
+    font-size: 0.8rem;
+    cursor: pointer;
+    padding: 6px 10px;
+    border-radius: 1rem;
+  }
+
+  .navbar {
+    display: flex;
+    width: 100%;
+    background: #262626;
+    overflow: hidden;
+    z-index: 55;
+    padding: 10px 0px;
+  }
+
+  .max-width {
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar-shopping-cart img {
+    height: 1.2rem;
+    cursor: pointer;
+    margin-right: 10px;
+  }
+
+  .navbar .menu li {
+    display: block;
+  }
+
+  .navbar .menu li a {
+    display: none;
+  }
+
+  .menu-btn-icon img {
+    height: 1.2rem;
+    display: block;
+  }
+  .menu-btn-icon {
+    margin-right: 1rem;
+    display: block;
+    align-self: center;
+  }
+
+  .navbar .menu li {
+    list-style: none;
+  }
+
+  .navbar .menu {
+    display: flex;
+  }
+  .icons-navbar {
+    display: flex;
+  }
+
+  .selected-nabar-item-pill {
+    width: 2rem;
+    margin-top: 6px;
+    height: 3px;
+    border-radius: 2px;
+    background-color: #ff9500;
+  }
+
+  .box select {
+    background-color: orange;
+    color: white;
+    padding-top: 8px;
+    padding-left: 25px;
+    padding-right: 8px;
+    padding-bottom: 8px;
+    cursor: pointer;
+    border-radius: 50px;
+    margin-left: -15px;
+    width: auto;
+    border: none;
+    font-size: 0.8rempx;
+    -webkit-appearance: button;
+    appearance: button;
+    outline: none;
+  }
+
+  .box::before {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20%;
+    height: 100%;
+    text-align: center;
+    font-size: 28px;
+    line-height: 45px;
+    color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.1);
+    pointer-events: none;
+  }
+
+  .box:hover::before {
+    color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+
+  .box select option {
+    padding: 30px;
+    background: #262626;
+  }
+
+  /* image buttn  */
+
+  .prev-btn-slider,
+  .next-btn-slider {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    font-size: 1.2rem;
+    padding: 0.2rem 0.6rem;
+    margin: 0px 0.6rem;
+    border-radius: 3px;
+    background: orange;
+    cursor: pointer;
+    color: #fff;
+    transition: all 0.1s ease;
+    user-select: none;
+  }
+
+  .next-btn-slider {
+    right: 0px;
+  }
+
+  /* image - text */
+  .slider-img-text {
+    position: absolute;
+    color: white;
+    left: 10%;
+    top: 40%;
+    z-index: 2;
+  }
+
+  .orange-text-slider {
+    font-size: 1rem;
+    color: orange;
+  }
+  .title-slider {
+    font-size: 1.6rem;
+    margin-top: 6px;
+    letter-spacing: 3px;
+  }
+  .subtitle-slider {
+    font-size: 1rem;
+    margin-top: 5px;
+  }
+  .shopnow-btn-slider {
+    margin-top: 20px;
+    font-size: 0.6rem;
+    padding: 0.7rem 1rem;
+    background-color: orange;
+    width: 5.8rem;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+
+  /* sort categories */
+  .sort-categories {
+    height: 40px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    background-color: #ff9500;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 0.6rem;
+    font-family: "Montserrat", sans-serif;
+    color: white;
+  }
+
+  .shop-categories-container {
+    display: flex;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    height: 40px;
+    width: 80%;
+    margin-top: 50px;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    background: rgba(211, 211, 211, 0.6);
+  }
+  .arrow-container {
+    display: flex;
+    margin: 10px;
+  }
+
+  .arrow-container span {
+    align-items: center;
+    font-weight: bold;
+    font-size: 1rem;
+    padding: 0.1rem 0.6rem;
+    cursor: pointer;
+    background-color: white;
+    margin-right: 10px;
+  }
+
+  /* banners */
+  .sale-image-container {
+    width: 80%;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    overflow: hidden;
+  }
+
+  .sale-image-row {
+    object-fit: cover;
+    width: 80%;
+  }
+
+  .row-imgs {
+    height: 380px;
+  }
+
+  .col-imgs2 {
+    margin-top: 6px;
+  }
+
+  .sale-image-column {
+    margin-left: 10px;
+    margin-right: 10px;
+    object-fit: cover;
+  }
+
+  .service-card-container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    overflow: hidden;
+    margin-top: -150px;
+  }
+  .services-img {
+    height: 320px;
+  }
+  .services-card {
+    margin-top: 150px;
+  }
+
+  /* promoting banner */
+  .promoting-banner {
+    position: relative;
+    width: 100%;
+  }
+
+  .promoting-banner img {
+    height: 20rem;
+    width: 100%;
+    position: relative;
+    margin-top: 50px;
+    object-fit: cover;
+  }
+
+  .promoting-banner-text-container {
+    position: absolute;
+    bottom: 6rem;
+    left: 1.2rem;
+    font-family: "Montserrat", sans-serif;
+  }
+  .promoting-banner-title {
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+  }
+  .promoting-banner-subtitle {
+    font-size: 1rem;
+    margin-top: 8px;
+    letter-spacing: 1.5px;
+  }
+
+  .promoting-banner-btn {
+    cursor: pointer;
+    margin-top: 24px;
+    background-color: orange;
+    width: 6rem;
+    padding: 10px;
+    color: white;
+    border-radius: 5px;
+    border: orange 1px solid;
+    transition: all 0.2s ease;
+  }
+
+  /* our specialities */
+  .out-specialities-container {
+    margin-top: 50px;
+    width: 80%;
+    background: rgb(240, 240, 240);
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: column;
+  }
+
+  .specialities-card {
+    display: flex;
+    padding: 25px 50px;
+    margin-top: 5px;
+  }
+
+  .aboutus-left-card {
+    margin-top: 50px;
+    width: 108%;
+    background-color: #282829;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-right: 50px;
+    padding-left: 110px;
+    border-radius: 64px;
+    margin-left: -60px;
+    box-shadow: 5px 2px 5px #c0bfbf;
+  }
+
+  .aboutus-text {
+    font-size: 1.6rem;
+  }
+  .aboutus-paragraph {
+    margin-top: 15px;
+    font-size: 0.8rem;
+  }
+
+  .aboutus-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+  .aboutus-container img {
+    height: 340px;
+    margin: 50px;
+    align-self: center;
+  }
+
+  .reviews-container {
+    display: flex;
+    background: rgb(236, 235, 235);
+    font-family: "Montserrat", sans-serif;
+    width: 80%;
+    height: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .review-person-img {
+    width: 65px;
+    height: 65px;
+    border-radius: 50px;
+    border: #0c0e1c solid;
+    border-width: 2px;
+    margin-top: 42.5px;
+  }
+
+  .review-row {
+    display: flex;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .review-person-name {
+    color: rgb(65, 64, 64);
+    font-size: 1rem;
+    margin-left: 20px;
+    padding-top: 10px;
+    margin-top: 0px;
+    font-weight: bold;
+  }
+
+  .qautation-img {
+    display: none;
+  }
+  .review-text {
+    color: rgb(107, 106, 106);
+    margin-top: 5px;
+    width: 200px;
+    margin-left: 20px;
+    font-size: 0.6rem;
+  }
+
+  .review-row-text-container {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+
+  .brand-container img {
+    width: 150px;
+    height: 75px;
+    padding: 25px 50px;
+    border: #636363 1px solid;
+    margin-right: 1rem;
+  }
+
+  /* footer */
+
+  footer {
+    background: rgb(233, 233, 233);
+    padding: 20px 30px;
+    margin-top: 60px;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer-main-container {
+    width: 30%;
+  }
+  .footer-main-container img {
+    padding-bottom: 18px;
+  }
+
+  .footer-main-text {
+    font-size: 0.8rem;
+  }
+
+  .footer-main-copiright-text {
+    display: flex;
+    padding-top: 20px;
+    font-size: 0.7rem;
+  }
+  .copyright-text {
+    padding-left: 6px;
+    padding-right: 10px;
+    font-weight: 600;
+  }
+  .footer-link-headline {
+    font-size: 1rem;
+    padding-bottom: 20px;
+  }
+  .footer-link-text {
+    font-size: 0.8rem;
+    color: rgb(104, 102, 102);
+    padding-top: 5px;
+  }
+  .footer-main-container img {
+    height: 2.2rem;
+  }
+  .footer-link-text-row {
+    font-size: 0.8rem;
+    display: flex;
+    padding-top: 5px;
+    color: rgb(104, 102, 102);
+  }
+  .footer-link-text-row img {
+    height: 0.8rem;
+    padding-right: 5px;
+  }
 }
